--- a/src/main/resources/templates/sysuser/sysuserlist.html
+++ b/src/main/resources/templates/sysuser/sysuserlist.html
@@ -12,86 +12,62 @@
         <link rel="stylesheet" href="../js/layui-v2.5.5/layui/css/layui.css">
         <script src="../js/jquery.min.js"></script>
         <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
+        <script th:src="@{/lib/layui/lay/modules/util.js}"></script>
         <script th:src="@{/js/sysuser/sysuserlist.js}"></script>
     </head>
+
 <body >
-<div class="layui-row" id="EditUser" style="display:none;">
-    <div class="layui-col-md10">
-        <form class="layui-form layui-from-pane" id="updateUser"   style="margin-top:20px" >
 
-            <input type="hidden" name="isadmin" id="isadmin">
-            <input type="hidden" name="id" id="id">
-            <input type="hidden" name="isforbid" id="isforbid">
-            <input type="hidden" name="isable" id="isable">
-            <input type="hidden" name="rtime" id="rtime">
-            <div class="layui-form-item">
-                <label class="layui-form-label">用户名</label>
-                <div class="layui-input-block">
-                    <input type="text" name="fname" id="fname"  required  lay-verify="required" autocomplete="off" placeholder="请输入用户名" class="layui-input">
-                </div>
+<div id="add-user" style="display: none;">
+    <form class="layui-form" id="add-form" action="">
+        <div class="layui-form-item center" >
+            <label class="layui-form-label" style="width: 100px" >用户名</label>
+            <div class="layui-input-block">
+                <input type="text" name="username" required value="" style="width: 240px" lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">手机号</label>
-                <!--<div class="layui-input-block">
-                    <input type="text" name="phone" id="phone" required  lay-verify="required" autocomplete="off" placeholder="请输入手机号" class="layui-input">
-                </div>-->
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label" style="width: 100px">年龄</label>
+            <div class="layui-input-block">
+                <input type="text" name="age" required style="width: 240px" lay-verify="required" placeholder="请输入年龄" autocomplete="off" class="layui-input">
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">邮箱</label>
-                <div class="layui-input-block">
-                    <input type="text" name="email" id="email" required  lay-verify="required" autocomplete="off" placeholder="请输入邮箱" class="layui-input">
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label" style="width: 100px">联系地址</label>
+            <div class="layui-input-block">
+                <input type="text" name="address" required style="width: 240px" lay-verify="required" placeholder="请输入联系地址" autocomplete="off" class="layui-input">
             </div>
-
-            <div class="layui-form-item">
-                <label class="layui-form-label">密码</label>
-                <div class="layui-input-block">
-                    <input type="text" name="password" id="password" required  lay-verify="required" autocomplete="off" placeholder="请输入密码" class="layui-input">
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label" style="width: 100px">联系电话</label>
+            <div class="layui-input-block">
+                <input type="text" name="phone" required style="width: 240px" lay-verify="required" placeholder="请输入联系电话" autocomplete="off" class="layui-input">
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">真实姓名</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name" id="name" required  lay-verify="required" autocomplete="off" placeholder="请输入真实姓名" class="layui-input">
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label" style="width: 100px">密码</label>
+            <div class="layui-input-block">
+                <input type="password" name="userpwd" required style="width: 240px" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
             </div>
-
-
-            <div class="layui-form-item" id="showImg">
-                <label class="layui-form-label">头像</label>
-                <div class="layui-input-block">
-                    <img class="layui-upload-img"  id="imgshow" src="" style="width:100px;height:100px;" >
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label" style="width: 100px">请选择性别</label>
+            <div class="layui-input-block">
+                <input type="radio" name="sex" value="1" title="男" checked=""><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>男</div></div>
+                <input type="radio" name="sex" value="0" title="女"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>女</div></div>
             </div>
-
-
-            <div  class="layui-upload"  id="updateImg">
-                <button type="button"  class="layui-btn layui-btn-primary" id="img" style="margin-top: 30px;margin-left: 10px">修改头像</button>
-                <div class="layui-upload-list" style="margin-left: 120px;margin-top: -50px"  >
-                    <img class="layui-upload-img" id="demo1" src="" style="width:100px;height:100px;" >
-                    <p id="demoText"></p>
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit lay-filter="save" onclick="return false" >提交</button>
+                <button type="reset" class="layui-btn layui-btn-primary" id="closeBtn" >重置</button>
             </div>
-
-            <input type="hidden" name="headimg" id="headimg" value="" >
-
-
-            <div class="layui-form-item">
-                <label class="layui-form-label">自我介绍</label>
-                <div class="layui-input-block">
-                    <input type="text" name="introduce" id="introduce" required  lay-verify="required" autocomplete="off" placeholder="请输入自我介绍" class="layui-input">
-                </div>
-            </div>
-
-            <div class="layui-form-item" style="margin-top:40px" id="check">
-                <div class="layui-input-block">
-                    <button class="layui-btn  layui-btn-submit " lay-submit="" lay-filter="formDemo" >确认修改</button>
-                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-                </div>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
+
+
+
 <div style="padding: 15px">
 <form class="layui-form">
     <div class="layui-form-item">
@@ -147,7 +123,7 @@
     </div>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="add">新增</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
