--- a/src/main/resources/templates/sysuser/sysuserlist.html
+++ b/src/main/resources/templates/sysuser/sysuserlist.html
@@ -117,7 +117,7 @@
 
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="getCheckData">新增</button>
+        <button class="layui-btn layui-btn-sm" lay-event="getCheckData" id="adduser">新增</button>
         <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">编辑</button>
         <button class="layui-btn layui-btn-sm" lay-event="isAll">删除</button>
     </div>
