mobify by heyongjun 2021-04-21 1、厂家管理模块提交 2、菜单图标优化调整

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,26 +56,80 @@
         <ul id="nav">
             <li>
                 <a href="javascript:;">
-                    <i class="iconfont">&#xe6b8;</i>
-                    <cite>用户管理</cite>
+                    <i class="iconfont"><img src="/nvc/images/operuser.png" style="width: 30px"/></i>
+                    <cite>操作员管理</cite>
                     <i class="iconfont nav_right">&#xe6a7;</i>
                 </a>
                 <ul class="sub-menu">
                     <li>
                         <a _href="/nvc/sysuser/list">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>用户列表</cite>
+                            <cite>操作员列表</cite>
                             
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="/nvc/sysuser/list">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>操作员权限</cite>
+                        </a>
+                    </li >
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont"><img src="/nvc/images/vipuser.png" style="width: 30px"/></i>
+                    <cite>会员管理</cite>
+                    <i class="iconfont nav_right">&#xe6a7;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="/nvc/sysuser/list">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>会员列表</cite>
+
+                        </a>
+                    </li >
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont"><img src="/nvc/images/manufactured.png" style="width: 30px"/></i>
+                    <cite>厂家管理</cite>
+                    <i class="iconfont nav_right">&#xe6a7;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="/nvc/manufactured/list">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>厂家列表</cite>
+
+                        </a>
+                    </li >
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont"><img src="/nvc/images/goods.png" style="width: 30px"/></i>
+                    <cite>商品管理</cite>
+                    <i class="iconfont nav_right">&#xe6a7;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="/nvc/sysuser/list">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>商品类别列表</cite>
+
                         </a>
                     </li >
                     <li>
                         <a _href="html/member-del.html">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>会员删除</cite>
-                            
+                            <cite>商品信息列表</cite>
+
                         </a>
                     </li>
-                    <li>
+                   <!-- <li>
                         <a href="javascript:;">
                             <i class="iconfont">&#xe70b;</i>
                             <cite>会员管理</cite>
@@ -86,20 +140,20 @@
                                 <a _href="html/member-del.html">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员列表</cite>
-                                    
+
                                 </a>
                             </li >
                             <li>
                                 <a _href="html/member-del.html">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员删除</cite>
-                                    
+
                                 </a>
                             </li>
-                            
+
                         </ul>
-                    </li>
-                    
+                    </li>-->
+
                 </ul>
             </li>
         </ul>
