--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>雷士照明管理平台</title>
+    <title>TB管理平台</title>
     <link rel="stylesheet" type="text/css" th:href="@{css/login.css}">
-  <!--  <script src="js/jquery.min.js"></script>-->
     <script th:src="@{js/layui-v2.5.5/layui/layui.js}"></script>
-<!--    <script type="text/javascript" th:src="@{lib/layui/layui.js}"></script>-->
     <script src="js/common/common.js"></script>
     <script src="js/login/login.js"></script>
 
